# PandasCarInsights

./: .gitignore  .pre-commit-config.yaml  READEME.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: integracao_continua.yml
config/: config.py  rich_options.py
configs/: config.py
data/raw/: dataset.json
scripts/: script_analyze_car_data.py
src/: main.py
src/app/core/: caminhos.py  middleware.py  settings.py
src/app/database/: administrador_banco.py
src/app/display/: display.py
src/app/errors/: configuracao_invalida.py
src/app/interfaces/: administrador_banco.py  exemplo_service.py
src/app/middleware/: capturador_erros.py
src/app/schemas/: conexao_banco.py
src/app/scripts/: exemplo_script.py  mestre.py
src/app/services/: exemplo_service.py
src/data/raw/: car_dataset.json
src/domain/: car.py  car_data_analysis.py
src/interfaces/: dataframe_cleaner_interface.py  logger_interface.py  rich_printer_interface.py
src/interfaces/services/: car_data_analysis_interface.py  dataframe_analyzer_interface.py  dataset_loader_interface.py
src/interfaces/shared/: rich_printer_interface.py
src/scripts/: script_analyze_car_data.py
src/services/: car_data_analysis.py  containers.py  dataframe_analyzer.py  dataframe_cleaner.py  dataset_loader.py  script_analyze_car_data.py
src/shared/: base_logger.py  error_handling.py  rich_printer.py
src/utils/: dataframe_analyzer.py  dataframe_cleaner.py  logger.py  printer.py
tests/app/: conftest.py
tests/app/database/: conftest.py  test_administrador.py
tests/app/errors/: test_configuracao_invalida.py
tests/app/middleware/: conftest.py  test_capturador_erros.py
tests/app/scripts/: conftest.py  test_exemplo_script.py
tests/app/services/: test_exemplo_service.py
tests/base_tests/: base_test_case.py
tests/tests_scripts/tests_script_analyze_car_data/: test_analyze_car_data.py  test_get_data_from_json_into_dataframe.py
