# --- Configurações de Metadados do Projeto (PEP 621):

[project]
name = "projeto-rpa" 
version = "1.0.0"
authors = [
    { name = "Cauê" }
]

readme = "README.md"
requires-python = ">=3.12"

# Apenas o que o robô precisa para rodar
dependencies = [
    "dotenv",
    "beartype",
    "pydantic",
    "pydantic-settings",
    "setuptools",
    "pyodbc",
    "SQLAlchemy",
    "python-dateutil",
    "types-python-dateutil",
]

# Ferramentas de desenvolvimento e testes
[dependency-groups]
dev = [
    "coverage",
    "mypy",
    "bandit",
    "ruff",
    "pytest",
    "pytest-cov",
    "vulture",
    "deptry",
    "pre-commit",
]

# --- Scripts do projeto:

[project.scripts]
# Disparos da lógica do projeto que lida com regras de negócio
exemplo-script = "app.scripts.exemplo_script:exemplo_script"
mestre-script = "app.scripts.mestre:main"


# --- Sistema de Build:

[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm",
]

build-backend = "setuptools.build_meta"

[tool.uv]
managed = true
package = true


# --- Configuração de Pacotes:

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

exclude = [
    "tests*",
    "env*",
    "logs*",
    ".vscode*",
    ".github*",
    ".venv*",
    ".env*",
]


# --- Bandit (Segurança):

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    ".env",
]


# --- Mypy (Tipagem Estática):

[tool.mypy]
python_version = "3.12"
mypy_path = "src"

explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
strict = true

exclude = [
    "venv/",
    "env/",
    ".venv/",
    ".env/",
    "logs/",
    ".vscode/",
    "docs/",
]

disable_error_code = [
    "attr-defined",     # acesso aos atributos que o MyPy as vezes não sabe que existe ainda
]


# --- Ruff (Linter e Formatter):

[tool.ruff]
line-length = 85
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C90",  # mccabe (complexidade ciclomática)
    "PL",   # pylint (Todas as categorias: PLC, PLE, PLR, PLW)
    "UP",   # pyupgrade (modernização de sintaxe)
    "N",    # pep8-naming (padrões de nomes de variáveis/classes)
    "PT",   # regras de Pytest
]

[tool.ruff.lint.pylint]
max-args = 5

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = 83

[tool.ruff.lint.per-file-ignores]
"**/models/**/*.py" = ["N815", "N802", "N816"]

# --- Pytest (Execução de testes):

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

addopts = """
    -v 
    --cov=src 
    --cov-report=term-missing 
    --cov-fail-under=100 
    --ignore=src/app/auto
    --ignore=src/app/core
    --ignore=src/app/display     
"""


# --- Coverage (Testes):

[tool.coverage.report]
fail_under = 100
show_missing = true

exclude_also = [
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/__init__.py",
    "src/app/auto/*",
    "src/app/core/*",
    "src/app/display/*",         # TODO Remover
    "src/app/scripts/mestre.py", # TODO Remover
]


# --- Vulture (Detecção de código morto):

[tool.vulture]
exclude = [
    "src/app",             # TODO Remover
    "**/__pycache__",
    ".venv",
    "venv",
    "ENV",
    "env",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    "build",
    "dist",
    "models",
    "schemas",
    "htmlcov",
]

ignore_names = [
    "model_config",
    "kwargs",
    "args",
    "mock_sleep",
    "mock_print",
    "main",
]

min_confidence = 60
paths = ["src", "tests"]


# --- Deptry (Detecção de Bibliotecas Não Utilizadas):

[tool.deptry.per_rule_ignores]
DEP002 = [
    "ruff",
    "mypy",
    "bandit",
    "pytest",
    "pytest-cov", 
    "vulture",
    "deptry",
    "pre-commit",
    "coverage", 
    "setuptools",
    "PySocks",
    "pyodbc",
    "python-dateutil",
    "pre_commit",
    "types-python-dateutil",
]

DEP003 = [
    "app"
]
